Fix KafkaStreamsHealth throwing UnsupportedOperationException on immutable list